--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "nodemon": "^1.18.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-password-mask": "^3.3.1"
   }
 }
